tests/snapshots/yaml_suite_snapshots__yaml_suite_3MYT_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: "Plain Scalar looking like key, comment, anchor and tag"
  from: "https://gist.github.com/anonymous/a98d50ce42a59b1e999552bea7a31f57 via @ingydotnet"
  tags: scalar
  yaml: "---\nk:#foo\n &a !t s\n"
  tree: "+STR\n +DOC ---\n  =VAL :k:#foo &a !t s\n -DOC\n-STR\n"
  json: "\"k:#foo &a !t s\"\n"
  dump: "--- k:#foo &a !t s\n"
