tests/snapshots/yaml_suite_snapshots__yaml_suite_3R3P_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Single block sequence with anchor
  from: "@perlpunk"
  tags: anchor sequence
  yaml: "&sequence\n- a\n"
  tree: "+STR\n +DOC\n  +SEQ &sequence\n   =VAL :a\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  \"a\"\n]\n"
  dump: "&sequence\n- a\n"
