tests/snapshots/yaml_suite_snapshots__yaml_suite_3RLN_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Leading tabs in d…
  from: "@ingydotnet"
  tags: double whitespace
  yaml: "\"1 leading\n    \\t…"
  tree: "+STR\n +DOC\n  =VAL…"
  json: "1 leading \ttab"…
  emit: "1 leading \ttab"…
- yaml: "\"3 leading\n    ——…"
  tree: "+STR\n +DOC\n  =VAL…"
  json: "\"3 leading tab\"\n"
  emit: "\"3 leading tab\"\n"
- yaml: "\"4 leading\n    \\t…"
  tree: "+STR\n +DOC\n  =VAL…"
  json: "4 leading \t  ta…
  emit: "4 leading \t  ta…
- yaml: "\"6 leading\n    —…"
  tree: "+STR\n +DOC\n  =VA…"
  json: "\"6 leading tab\"\n"
  emit: "\"6 leading tab\"\n"
# 2 more items
