tests/snapshots/yaml_suite_snapshots__yaml_suite_3UYS_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Escaped slash in double quotes
  from: "@perlpunk"
  tags: double
  yaml: "escaped slash: \"a\\/b\"\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :escaped slash\n   =VAL \"a/b\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"escaped slash\": \"a/b\"\n}\n"
  dump: "escaped slash: \"a/b\"\n"
