tests/snapshots/yaml_suite_snapshots__yaml_suite_3UYS_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "escaped slash: \"a/b\"\n"
  from: "@perlpunk"
  json: "{\n  \"escaped slash\": \"a/b\"\n}\n"
  name: Escaped slash in double quotes
  tags: double
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :escaped slash\n   =VAL \"a/b\n  -MAP\n -DOC\n-STR\n"
  yaml: "escaped slash: \"a\\/b\"\n"
